@@ -26,7 +26,8 @@ CGI::Tiny - Common Gateway Interface, with no frills
       $fribble = $cgi->body_param('fribble');
     } else {
       $cgi->set_response_status(405);
-      return $cgi->render;
+      $cgi->render;
+      exit;
     }
     die "Invalid fribble parameter" unless length $fribble;
     $cgi->render(json => {fribble => $fribble});
@@ -104,7 +105,9 @@ rendered yet) render a 500 Internal Server Error.
 
 Note that the C<cgi> block's current implementation as a regular exported
 subroutine is an implementation detail, and future implementations reserve the
-right to provide it as an XSUB or keyword for performance reasons.
+right to provide it as an XSUB or keyword for performance reasons. You should
+not rely on C<@_> to be set, and you should not use C<return> to exit the
+block; use C<exit> to end a CGI script early after rendering a response.
 
 =head1 EXTENDING
 
